--- a/frontend/src/components/latest-blog-list/latest-blog-list.scss
+++ b/frontend/src/components/latest-blog-list/latest-blog-list.scss
@@ -73,8 +73,9 @@
       h3 {
         font-size: var(--font-size-4);
         margin: 0 0 0 0;
-        overflow: hidden;
         hyphens: auto;
+        -webkit-hyphens: auto;
+        -ms-hyphens: auto;
       }
 
       p {
